@@ -12,114 +12,6 @@
 FSL_TEST_SUITE( coercion_int );
 
 
-namespace {
-    class static_base_tests {
-        BOOST_STATIC_ASSERT(( boost::is_integral< signed char >::value ));
-        BOOST_STATIC_ASSERT(( boost::is_signed< signed char >::value ));
-        BOOST_STATIC_ASSERT( sizeof(signed char) == 1 );
-        BOOST_STATIC_ASSERT(( boost::is_integral< int64_t >::value ));
-        BOOST_STATIC_ASSERT(( boost::is_signed< int64_t >::value ));
-        BOOST_STATIC_ASSERT( sizeof(int64_t) == 8 );
-        BOOST_STATIC_ASSERT(( boost::is_integral< boost::uintmax_t >::value ));
-        BOOST_STATIC_ASSERT(( boost::is_unsigned< boost::uintmax_t >::value ));
-        BOOST_STATIC_ASSERT( sizeof(boost::uintmax_t) == 8 );
-
-        typedef boost::mpl::and_<
-            boost::mpl::bool_< true >,
-            boost::mpl::bool_< true >,
-            boost::mpl::bool_< true >,
-            boost::mpl::bool_< true >,
-            boost::mpl::bool_< true >
-        > boost_mpl_and;
-        typedef boost::enable_if<
-            boost::mpl::and_<
-                boost::mpl::bool_< boost::is_integral< signed char >::value >,
-                boost::mpl::bool_< boost::is_integral< int64_t >::value >,
-                boost::mpl::bool_< ( sizeof(signed char) < sizeof(int64_t) ) >,
-                boost::mpl::or_<
-                    boost::mpl::and_<
-                        boost::mpl::bool_< boost::is_signed< signed char >::value >,
-                        boost::mpl::bool_< boost::is_signed< int64_t >::value >
-                    >,
-                    boost::mpl::and_<
-                        boost::mpl::bool_< boost::is_unsigned< signed char >::value >,
-                        boost::mpl::bool_< boost::is_unsigned< int64_t >::value >
-                    >
-                >
-            >
-        >::type test_coerce_int_T_smaller_F_larger;
-    };
-    class static_asserts {
-        BOOST_STATIC_ASSERT((
-            fostlib::detail::coerce_int_equal_size_same_sign<
-                char, char
-            >::value
-        ));
-        BOOST_STATIC_ASSERT((
-            fostlib::detail::coerce_int_equal_size_same_sign<
-                int, int
-            >::value
-        ));
-        BOOST_STATIC_ASSERT((
-            fostlib::detail::coerce_int_equal_size_same_sign<
-                uint64_t, uint64_t
-            >::value
-        ));
-
-        BOOST_STATIC_ASSERT((
-            fostlib::detail::coerce_int_T_larger_F_smaller<
-                uint64_t, unsigned char
-            >::value
-        ));
-        BOOST_STATIC_ASSERT((
-            fostlib::detail::coerce_int_T_larger_F_smaller<
-                int64_t, signed char
-            >::value
-        ));
-
-        BOOST_STATIC_ASSERT((
-            fostlib::detail::coerce_int_T_smaller_F_larger_unsigned<
-                unsigned char, uint64_t
-            >::value
-        ));
-        BOOST_STATIC_ASSERT((
-            fostlib::detail::coerce_int_T_smaller_F_larger_signed<
-                signed char, int64_t
-            >::value
-        ));
-        BOOST_STATIC_ASSERT((
-            fostlib::detail::coerce_int_T_smaller_F_larger_signed<
-                int, int64_t
-            >::value
-        ));
-
-        BOOST_STATIC_ASSERT((
-            fostlib::detail::coerce_int_T_smaller_signed_F_larger_unsigned<
-                signed char, uint64_t
-            >::value
-        ));
-
-        BOOST_STATIC_ASSERT((
-            fostlib::detail::coerce_int_T_larger_signed_F_smaller_unsigned<
-                int64_t, unsigned char
-            >::value
-        ));
-
-        BOOST_STATIC_ASSERT((
-            fostlib::detail::coerce_int_T_larger_unsigned_F_smaller_signed<
-                uint64_t, signed char
-            >::value
-        ));
-
-        BOOST_STATIC_ASSERT((
-            fostlib::detail::coerce_int_T_smaller_unsigned_F_larger_signed<
-                unsigned char, int64_t
-            >::value
-        ));
-    };
-}
-
-
 FSL_TEST_FUNCTION( from_same_to_same ) {
     signed char c1 = 0, c2 = -10, c3 = 10;
     unsigned char uc1 = 0, uc2 = 10;
